added-some-styles

--- a/alexander/third_task/catalogue.html
+++ b/alexander/third_task/catalogue.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sunko industries</title>
     <link rel='icon' href='./images/favicon.jpg' type='image/x-icon'/ >
-    <link rel="stylesheet" href="./css/about.css" /> <!-- Im confused... isn't this catalogue?-->
+    <link rel="stylesheet" href="./css/catalogue.css" /> 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -23,36 +23,22 @@
           <div class="nav-wrapper black">
             <a href="home.html" class="brand-logo">S.industries</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-              ><i class="material-icons">menu</i></a
-            >
+              ><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="home.html">Home</a></li>
               <li><a href="catalogue.html">Catalogue</a></li>
-              <!-- Why do I have catalogue when im in catalogue ? -->
-              <li><a href="contact.html">Contact us</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact us</a></li> 
             </ul>
           </div>
         </nav>
       </div>
       <ul class="sidenav" id="mobile-demo">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="catalogue.html">Catalogue</a></li>
-        <!-- Same Question as above ... ? -->
-        <li><a href="contact.html">Contact us</a></li>
+          <li><a href="catalogue.html">Catalogue</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="contact.html">Contact us</a></li>
       </ul>
     </header>
     <main>
-      <!-- I almost missed the prices - they should be more visible -> font or color.. ? -->
-
-      <!-- 
-          I made the same code for the grid as your but with some simpler code.
-          The idea is:
-          "row" -> container for grid
-          "col s12" -> takes 100% width
-          "col s6" -> takes 50% width
-
-          the way you have done it is creating a conflicting classes -> too unstable. Review it and get back to me for further assistance if needed.
-    -->
       <h1>FOR SHOPPING GO TO CONTACT US</h1>
       <div class="row col s12">
         <div class="col s12 l6">
@@ -64,7 +50,7 @@
                     <span class="card-title">
                         AK47
                     </span>
-                    <p>MOST COMMONLY USED WEAPON IN THE WORLD! 2500$</p>
+                    <p>MOST COMMONLY USED WEAPON IN THE WORLD! <b class="prices">2500$</b></p>
                 </div>
             </div>
         </div>
@@ -77,7 +63,7 @@
                         <span class="card-title">
                             RPG-7
                         </span>
-                        <p>HIGHLY DESTRUCTIVE GOOD AGAINST ARMORED! 3100$</p>
+                        <p>HIGHLY DESTRUCTIVE GOOD AGAINST ARMORED! <b class="prices">3100$</b></p>
                     </div>
                 </div>
             </div>
@@ -90,7 +76,7 @@
                             <span class="card-title">
                                 RPK
                             </span>
-                            <p>VERY FAST RATE OF FIRE WITH LITTLE RECOIL BEST USE STATIONARY! 2700$</p>
+                            <p>VERY FAST RATE OF FIRE WITH LITTLE RECOIL BEST USE STATIONARY! <b class="prices">2700$</b></p>
                         </div>
                     </div>
             </div>
@@ -103,7 +89,7 @@
                             <span class="card-title">
                                 SVD
                             </span>
-                            <p>SEMI AUTO SNIPER RIFLE GOOD TO 1KM LONG SHOTS! 3500$</p>
+                            <p>SEMI AUTO SNIPER RIFLE GOOD TO 1KM LONG SHOTS! <b class="prices">3500$</b></p>
                         </div>
                     </div>
             </div>
@@ -116,7 +102,7 @@
                             <span class="card-title">
                                 AWP
                             </span>
-                            <p>MAGNUM BOLT SNIPER RIFLE GOOD TO UP 2KM LONGSHOTS! 4000$</p>
+                            <p>MAGNUM BOLT SNIPER RIFLE GOOD TO UP 2KM LONGSHOTS! <b class="prices">4000$</b></p>
                         </div>
                     </div>
             </div>
@@ -129,7 +115,7 @@
                             <span class="card-title">
                                 M16
                             </span>
-                            <p>HIGHLY ACCURATE ASSAULT RIFLE! 3000$</p>
+                            <p>HIGHLY ACCURATE ASSAULT RIFLE! <b class="prices">3000$</b></p>
                         </div>
                     </div>
             </div>
@@ -142,7 +128,7 @@
                             <span class="card-title">
                                 BALACLAVA
                             </span>
-                            <p>100% COTTON PRODUCED BY ISIS! 100$</p>
+                            <p>100% COTTON PRODUCED BY ISIS! <b class="prices">100$</b></p>
                         </div>
                     </div>
             </div>
@@ -155,126 +141,11 @@
                             <span class="card-title">
                                 50 CAL
                             </span>
-                            <p> BIGGEST CALIBER FOR SNIPER HIGHLY RECOMMENDED FOR EXTREEME DISTANCES! 5000$</p>
+                            <p> BIGGEST CALIBER FOR SNIPER HIGHLY RECOMMENDED FOR EXTREEME DISTANCES! <b class="prices">5000$</b></p>
                         </div>
                     </div>
             </div>
     </div>        
-
-      <!-- <div class="row">
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/ak-sale.jpg" alt="ak47" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                AK47
-              </span>
-              <p>MOST COMMONLY USED WEAPON IN THE WORLD! 2500$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/rpg-sale.jpg" alt="rpg" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                RPG-7
-              </span>
-              <p>HIGHLY DESTRUCTIVE GOOD AGAINST ARMORED! 3100$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/rpk-sale.jpg" alt="rpk" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                RPK
-              </span>
-              <p>
-                VERY FAST RATE OF FIRE WITH LITTLE RECOIL BEST USE STATIONARY!
-                2700$
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/svd2-sale.jpg" alt="svd" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                SVD
-              </span>
-              <p>SEMI AUTO SNIPER RIFLE GOOD TO 1KM LONG SHOTS! 3500$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/awp-sale.jpg" alt="awp" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                AWP
-              </span>
-              <p>MAGNUM BOLT SNIPER RIFLE GOOD TO UP 2KM LONGSHOTS! 4000$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/m16-sale.jpg" alt="m16" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                M16
-              </span>
-              <p>HIGHLY ACCURATE ASSAULT RIFLE! 3000$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/balaclava-sale.jpg" alt="m16" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                BALACLAVA
-              </span>
-              <p>100% COTTON PRODUCED BY ISIS! 100$</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./images/barett-sale.jpg" alt="m16" height="300px" />
-            </div>
-            <div class="card-content">
-              <span class="card-title">
-                50 CAL
-              </span>
-              <p>
-                BIGGEST CALIBER FOR SNIPER HIGHLY RECOMMENDED FOR EXTREEME
-                DISTANCES! 5000$
-              </p>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
     </main>
     <footer class="page-footer black">
       <div class="footer-copyright">
