--- a/alexander/third_task/contact.html
+++ b/alexander/third_task/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sunko industries</title>
     <link rel='icon' href='favicon.jpg' type='image/x-icon'/ >
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
 </head>
@@ -18,17 +18,17 @@
                 <a href="home.html" class="brand-logo">S.industries</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                  <li><a href="home.html">Home</a></li>
-                  <li><a href="catalogue.html">Catalogue</a></li>
-                  <li><a href="about.html">About us</a></li>  
+                <li><a href="catalogue.html">Catalogue</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="contact.html">Contact us</a></li>  
                 </ul>
               </div>
             </nav>
         </div>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="catalogue.html">Catalogue</a></li>
-          <li><a href="about.html">About us</a></li>
+            <li><a href="catalogue.html">Catalogue</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="contact.html">Contact us</a></li> 
         </ul>
     </header> 
     <main class="center-align">
@@ -47,29 +47,27 @@
           </form>
         </div>
        </div>
+       <div class="center-btn">
        <div class="container">
            <div class="row">
-            <form action="#" form class="col s12">
-                <!-- <p> different element should be used -> you need line break -->
+            <form action="#" form class="col s12">    
                   <label >
                     <input name="group1" type="radio"/>
                     <span>Male</span>
                   </label>
-                <!-- </p> -->
-                <!-- <p> -->
+                  <br>
                     <label >
                       <input name="group1" type="radio"/>
                       <span>Female</span>
                     </label>
-                <!-- </p> -->
-                <!-- <p > -->
+                    <br>
                     <label > 
                       <input name="group1" type="radio"/>
                       <span>Gender</span>
                     </label>
-                <!-- </p>            -->
            </div>
        </div>
+      </div>
        <div class="container">
         <div class="row">
             <form class="col s12">
