--- a/alexander/third_task/home.html
+++ b/alexander/third_task/home.html
@@ -25,9 +25,6 @@
             </div>
           </nav>
       </div>
-
-      <!-- Good home page. -->
-
       <ul class="sidenav" id="mobile-demo">
         <li><a href="catalogue.html">Catalogue</a></li>
         <li><a href="about.html">About us</a></li>
@@ -44,7 +41,7 @@
         <div class="right" id="rights">All rights reserved</div>
       </div>
   </footer>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- This is bloat, vanilla javascirpt works better... -> nice execute tho. -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
 $(document).ready(function(){
