--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -27,13 +27,13 @@
     </nav>
     </div>
   <main>
-    <div class = "container ">
+    <div class = "container " style="margin-top: 50px;">
       <form action="CONFIRMED.html" method="post">
 
-        <label for="fname" class="black-text">First Name</label>
+        <label for="fname" class="black-text left">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
 
-        <label for="lname" class="black-text">Last Name</label>
+        <label for="lname" class="black-text left">Last Name</label>
         <input type="text" id="lname" name="lastname" placeholder="Your last name.." required> 
 
         <p>Please select your gender:</p>
@@ -50,11 +50,10 @@
           </label>
         </p>
 
-        <p>Number</p>
-        <label for="number"></label>
+        <label for="number" class="black-text left">Number</label>
         <input type="number" id="number" name="number" placeholder="Your phone number.." required>
                 
-        <label for="subject" class="black-text">Message</label>
+        <label for="subject" class="black-text left" style="margin: 20px 0px">Message</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px" required></textarea>
                 
         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
