Updated feedback -> Pending Changes

--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BoostingAcc's.eu</title>
   </head>
-
+  <!-- TODO: Make me smaller -->
   <body class="light-blue lighten-5">
     <div class="navbar-fixed">
     <nav class="nav-wrapper indigo">
@@ -57,7 +57,7 @@
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px" required></textarea>
                 
         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-          <i class="material-icons right">send</i>
+          <i class="material-icons right">send</i> <!-- TODO:  MISSING HREF to Confirmed-->
         </button>
             
       </form>
