--- a/alexander/third_task/about.html
+++ b/alexander/third_task/about.html
@@ -34,7 +34,7 @@
     <main>      
      <h1>SUNKO INDUSTRIES</h1>
       <h2>1936</h2>
-         <div class="card-panel teal"> <!-- TODO: For teal white color text works better-->
+         <div class="card-panel teal">
           <p>
            Sunko industries (SI) ЕAD is the biggest enterprise of the military and industrial complex in Bulgaria.
            The first stone in its foundation was laid on 9 June, 1936.
