--- a/alexander/third_task/contact.html
+++ b/alexander/third_task/contact.html
@@ -94,7 +94,7 @@
             <a class="waves-effect waves-light btn">SEND</a>
          </div>
     </main> 
-    <footer class="page-footer black"> <!--FIXME: There is a huge space below the footer -->
+    <footer class="page-footer black">
         <div class="footer-copyright">
           © 2019 Sunko Industries
           <div class="right" id="rights">All rights reserved</div>
