--- a/daniel/Week2-task1/HOMEPAGE.html
+++ b/daniel/Week2-task1/HOMEPAGE.html
@@ -18,7 +18,7 @@
         <div class="container">
                 <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="homepage.html" class="waves-effect waves-light pulse btn-small">Home</a></li> <!-- TODO: Use https://materializecss.com/color.html to find color (ex. add: "purple accent-3" in class)-->
+                <li><a href="homepage.html" class="waves-effect waves-light pulse btn-small ">Home</a></li> 
                 <li><a href="catalog.html" class="waves-effect waves-light  btn-small">Catalog</a></li>
                 <li><a href="aboutme.html" class="waves-effect waves-light btn-small">About</a></li>
                 <li><a href="contactme.html" class="waves-effect waves-light btn-small">Contact</a></li>
@@ -77,10 +77,6 @@
         <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
             <div class="grid-container center">
                 <div class="item1">© 2018 Copyright - All Rights Reserved</div>
-                <div class="item2 ">
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">Forum</a> <!-- TODO Why do you need this? -->
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">Partners</a> <!-- TODO  Why do you need this? -->
-                </div>
             </div>
         </footer>
     <!--JavaScript at end of body for optimized loading-->
