--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -28,7 +28,7 @@
     </div>
   <main>
     <div class = "container " style="margin-top: 50px;">
-      <form action="CONFIRMED.html" method="post">
+      <form >
 
         <label for="fname" class="black-text left">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
@@ -56,21 +56,13 @@
         <label for="subject" class="black-text left" style="margin: 20px 0px">Message</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px" required></textarea>
                 
-        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-          <i class="material-icons right">send</i> <!-- TODO:  MISSING HREF to Confirmed-->
-        </button>
-            
+        <a href="CONFIRMED.html" class="waves-effect waves-light pulse btn">Submit<i class="material-icons right">send</i></a>
       </form>
     </div>
   </main>
   <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
     <div class="grid-container center">
         <div class="item1">© 2018 Copyright - All Rights Reserved</div>
-        <div class="item2 ">
-            <a href="#!" class="waves-effect waves-light btn-small disabled">Forum</a>
-            <a href="#!" class="waves-effect waves-light btn-small disabled">Partners</a>
-        </div>
-    </div>
 </footer>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
