--- a/daniel/Week2-task1/CONFIRMED.html
+++ b/daniel/Week2-task1/CONFIRMED.html
@@ -12,10 +12,11 @@
     <title>BoostingAcc's.eu</title>
   </head>
     <body> 
+      <!-- TODO: Style me-->
         <main>
             <div class="container">
             <h1 class="center">Confirmed! :) </h1>
-            <img class= "container" src="./images/check_mark.jpg" alt = "checkmark" style="width: 100%"/>  
+            <img class= "container" src="./images/check_mark.jpg" alt = "checkmark" style="width: 100%"/>  <!--TODO: Make me smaller and centered-->
             </div>
             <div class="container center">
                 <a href="homepage.html" class="waves-effect waves-light pulse btn-large">Back to Homepage</a>
