--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -56,7 +56,7 @@
         <label for="subject" class="black-text left" style="margin: 20px 0px">Message</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px" required></textarea>
                 
-        <a href="CONFIRMED.html" class="waves-effect waves-light pulse btn">Submit<i class="material-icons right">send</i></a>
+        <a href="CONFIRMED.html" class="waves-effect waves-light pulse btn">Submit<i class="material-icons right">send</i></a> <!--TODO: Don't make me pulse - im not a selected link -->
       </form>
     </div>
   </main>
