--- a/daniel/Week2-task1/ABOUTME.html
+++ b/daniel/Week2-task1/ABOUTME.html
@@ -6,7 +6,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BoostingAcc's.eu</title>
@@ -18,24 +18,23 @@
         <div class="container">
                 <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="homepage.html" class="waves-effect waves-light btn-small">Home</a></li>
-                <li><a href="catalog.html" class="waves-effect waves-light btn-small">Catalog</a></li>
-                <li><a href="aboutme.html" class="waves-effect waves-light pulse btn-small">About</a></li>
-                <li><a href="contactme.html" class="waves-effect waves-light btn-small">Contact</a></li>
+                <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Home</a></li>
+                <li><a href="catalog.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Catalog</a></li>
+                <li><a href="aboutme.html" class="waves-effect waves-light pulse btn-small light-green accent-3 black-text">About</a></li>
+                <li><a href="contactme.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Contact</a></li>
             </ul>
         </div>
     </nav>
-    </div>
-<!----------------------------------------------------------------------------->
+    </div> 
         <main>
             <div class="wrapper">
                     <span class="main">
-                        <p class = "center amber-text text-darken-4">About Me :)</p>
+                        <p class = "center  cyan-text text-accent-3 edit" >About Me :)</p>
                         <p>
                             Hello, my name is John. I am 26 years old and I'm from Texas, USA. I have been playing PC games ever since I was 5 years old and my all-time favorites are Dota 2, CSGO and WoW.
-                            I have spent quite a long time playing these games and I can proudly say that I have somewhat mastered them. That's why I am offering account boosting services for Dota2, CSGO and WoW 
+                            I have spent quite a long time playing these games and I can proudly say that I have somewhat mastered them. That's why I am offering account boosting services for Dota2, CSGO and WoW. 
                         </p>
-                        <p class = "center amber-text text-darken-4">Some of my achievements are:</p>
+                        <p class = "center  cyan-text text-accent-3 edit">Some of my achievements are:</p>
                             <ul>
                             <li>Reaching Immortal rank > 2000 in Dota 2, in first ever ranked season and keep<br> this rank by now (4th season going) - playtime 10000+ hours, 10000+ games.</li>
                             <li>Reaching Global Elite in CSGO - playtime: 6000+ hours.</li>
@@ -44,12 +43,12 @@
                 <aside class="logo logo"><img src = "./images/profilepic.jpeg" class="profile"></aside>
             </div>
         </main>
-<!----------------------------------------------------------------------------->
         <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
             <div class="grid-container center">
                 <div class="item1">© 2018 Copyright - All Rights Reserved</div>
         </footer>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
