--- a/daniel/Week2-task1/CATALOG.html
+++ b/daniel/Week2-task1/CATALOG.html
@@ -6,7 +6,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BoostingAcc's.eu</title>
@@ -18,10 +18,10 @@
         <div class="container">
                 <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="homepage.html" class="waves-effect waves-light btn-small">Home</a></li>
-                <li><a href="catalog.html" class="waves-effect waves-light pulse btn-small">Catalog</a></li>
-                <li><a href="aboutme.html" class="waves-effect waves-light btn-small">About</a></li>
-                <li><a href="contactme.html" class="waves-effect waves-light btn-small">Contact</a></li>
+                <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text ">Home</a></li>
+                <li><a href="catalog.html" class="waves-effect waves-light pulse btn-small light-green accent-3 black-text">Catalog</a></li>
+                <li><a href="aboutme.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">About</a></li>
+                <li><a href="contactme.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -30,14 +30,14 @@
           <div class="wrapper">
             <h2 class = "red darken-4 white-text">Dota 2 services</h2>
             <article class="main">
-                <form action="CONTACTME.html" method="post">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
-                <input type="submit" value="Order">
+                <form action="CONTACTME.html" method="post"  >
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
+                <input id="type1" type="submit" value="ORDER">
                 </form>
                 </article>
             <aside class="logo logo"><img src = "./images/catalog1.png"></aside>
@@ -45,23 +45,23 @@
         <div class="wrapper">
                 <h2 class = "yellow accent-3  black-text">Counter Strike: Global Offensive services</h2>
                 <article class="main" id="margin">
-                    <form action="CONTACTME.html" method="post">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
-                    <input type="submit" value="Order">
+                    <form action="CONTACTME.html" method="post" >
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
+                    <input id="type2" type="submit" value="ORDER">
                     </form>
                     </article>
                 <aside class="logo logo"><img src = "./images/catalog2.png"></aside>
             </div>
-            <div class="wrapper">
+            <div class="wrapper" >
                     <h2 class = "indigo darken-3  light-green-text text-accent-3" >World of Warcraft services</h2>
                     <article class="main" id="margin2">
                         <form action="CONTACTME.html" method="post">
-                        <input type="submit" value="Order">
+                        <input id="type3" type="submit" value="ORDER">
                         </form>
                         </article>
                     <aside class="logo pic3"><img src = "./images/catalog3.png"></aside>
@@ -73,5 +73,6 @@
     </footer>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
