--- a/daniel/Week2-task1/CONFIRMED.html
+++ b/daniel/Week2-task1/CONFIRMED.html
@@ -6,20 +6,19 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BoostingAcc's.eu</title>
   </head>
-    <body> 
-      <!-- TODO: Style me-->
+    <body  class="light-blue lighten-5"> 
         <main>
             <div class="container">
-            <h1 class="center">Confirmed! :) </h1>
-            <img class= "container" src="./images/check_mark.jpg" alt = "checkmark" style="width: 100%"/>  <!--TODO: Make me smaller and centered-->
+            <h1 class="center">Confirmed! :) &#128519;</h1>
+            <img class= "container" src="./images/checkmark-png-25951.png" alt = "checkmark" style="width: 100%"/>  <!--TODO: Make me smaller and centered-->
             </div>
             <div class="container center">
-                <a href="homepage.html" class="waves-effect waves-light pulse btn-large">Back to Homepage</a>
+                <a href="homepage.html" class="waves-effect waves-light pulse btn-large light-green accent-3 black-text">Back to Homepage</a>
             </div>
         </main>
         <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
@@ -28,5 +27,6 @@
         </footer>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
