--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -6,22 +6,21 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>BoostingAcc's.eu</title>
   </head>
-  <!-- TODO: Make me smaller -->
   <body class="light-blue lighten-5">
     <div class="navbar-fixed">
     <nav class="nav-wrapper indigo">
         <div class="container">
                 <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="homepage.html" class="waves-effect waves-light btn-small">Home</a></li>
-                <li><a href="catalog.html" class="waves-effect waves-light btn-small">Catalog</a></li>
-                <li><a href="aboutme.html" class="waves-effect waves-light btn-small">About</a></li>
-                <li><a href="contactme.html" class="waves-effect waves-light pulse btn-small">Contact</a></li>
+                <li><a href="homepage.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Home</a></li>
+                <li><a href="catalog.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">Catalog</a></li>
+                <li><a href="aboutme.html" class="waves-effect waves-light btn-small light-green accent-3 black-text">About</a></li>
+                <li><a href="contactme.html" class="waves-effect waves-light pulse btn-small light-green accent-3 black-text">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -56,7 +55,7 @@
         <label for="subject" class="black-text left" style="margin: 20px 0px">Message</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px" required></textarea>
                 
-        <a href="CONFIRMED.html" class="waves-effect waves-light pulse btn">Submit<i class="material-icons right">send</i></a> <!--TODO: Don't make me pulse - im not a selected link -->
+        <a href="CONFIRMED.html" class="waves-effect waves-light btn">Submit<i class="material-icons right">send</i></a>
       </form>
     </div>
   </main>
@@ -66,5 +65,6 @@
 </footer>
 <!--JavaScript at end of body for optimized loading-->
 <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
