--- a/ivan/third_task/catalogue.html
+++ b/ivan/third_task/catalogue.html
@@ -1,98 +1,107 @@
 <DOCTYPE html>
-<html>
-    <head>
-        <title>Vani Development</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie-edge">
-        <meta name="viewport" content="width=device-width, initial scale=1.0">
-        <link rel="icon" href="./images/...." type="image/x-icon">
-        <link rel="stylesheet" href="./css/catalogue.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
-    </head>
-    <body>
-        <header>
-            <div class="navigationbar-fixed">
-                <nav>
-                    <div class="nav-wrapper red">
-                        <a href="home.html" class="logo">Home</a>
-                        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                        <ul class="right hide-on-med-and-down">
-                            <li><a href="home.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact_me.html">Contact Me</a></li>
-                         </ul>
-                    </div>
-                </nav>
-            </div>
-            <ul class="sidenav" id="mobile-demo">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact_me.html">Contact Me</a></li>
+  <html>
+
+  <head>
+    <title>Vani Development</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <link rel="icon" href="./images/...." type="image/x-icon">
+    <link rel="stylesheet" href="./css/catalogue.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  </head>
+
+  <body>
+    <header>
+      <div class="navigationbar-fixed">
+        <nav>
+          <div class="nav-wrapper red">
+            <a href="home.html" class="logo">Home</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+              <li><a href="home.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact_me.html">Contact Me</a></li>
             </ul>
-        </header>
-        <main>
-            <tr class="display:table-cell">
-                <td class="column">
-                <img src="./images/aston-martin-logo.jpg" alt="Aston Martin" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/bugatti-logo.jpg" alt="Buggati" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/ferrari-logo.jpg" alt="Ferrari" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/hennessey-logo.jpg" alt="Hennesey" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/koenigsegg-logo.jpg" alt="Koenigsegg" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/lamborghini-logo.jpg" alt="Lamborghini" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/mclaren-logo.jpg" alt="Mclaren" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/mercedes-logo.jpg" alt="Mercedes" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/nio-logo.jpg" alt="Nio" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/porsche-logo.jpg" alt="Porsche" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/rimac-logo.jpg" alt="Rimac" onclick="myFunction(this);">
-                </td>
-                <td class="row">
-                <img src="./images/tesla-logo.jpg" alt="Tesla" onclick="myFunction(this);">
-            </tr>
-            <!-- The expanding image container -->
-            <div class="container">
-                <!-- Close the image -->
-                <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-            
-                <!-- Expanded image -->
-                <img id="expandedImg" style="width:100%">
-            
-                <!-- Image text -->
-                <div id="imgtext"></div>
-            </div>
-        </main>
-        <footer class="page-footer red">
-            <div class="footer-copyright">
-                © 2019 Vani Development
-                <div class="right" id="rights">All rights reserved</div>
-            </div>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- This is bloat, vanilla javascirpt works better... -> nice execute tho. -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script>
-        $(document).ready(function(){
-        $('.sidenav').sidenav();
-        });
-        </script>
-    </body>
-</html>
+          </div>
+        </nav>
+      </div>
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="home.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact_me.html">Contact Me</a></li>
+      </ul>
+    </header>
+    <main>
+      <tr class="display:table-cell">
+        <!-- TODO: Make the table into a grid like the tea project. More space between, utilize whole page -->
+        <td class="column">
+          <img src="./images/aston-martin-logo.jpg" alt="Aston Martin" class='modal-trigger' href="#modal1">
+          <!-- TODO:  The class  is the trigger for the modal, href is the indicator for which modal to open based on ID -->
+        </td>
+
+        <div id="modal1" class="modal">
+          <!-- TODO:  ID indicates to which trigger it is related, class modal is the basic styling to look good. The whole div is what you will see when you open the modal -->
+          <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+          </div>
+          <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+          </div>
+        </div>
+
+        <td class="row">
+          <img src="./images/bugatti-logo.jpg" alt="Buggati">
+        </td>
+        <td class="row">
+          <img src="./images/ferrari-logo.jpg" alt="Ferrari">
+        </td>
+        <td class="row">
+          <img src="./images/hennessey-logo.jpg" alt="Hennesey">
+        </td>
+        <td class="row">
+          <img src="./images/koenigsegg-logo.jpg" alt="Koenigsegg">
+        </td>
+        <td class="row">
+          <img src="./images/lamborghini-logo.jpg" alt="Lamborghini">
+        </td>
+        <td class="row">
+          <img src="./images/mclaren-logo.jpg" alt="Mclaren">
+        </td>
+        <td class="row">
+          <img src="./images/mercedes-logo.jpg" alt="Mercedes">
+        </td>
+        <td class="row">
+          <img src="./images/nio-logo.jpg" alt="Nio">
+        </td>
+        <td class="row">
+          <img src="./images/porsche-logo.jpg" alt="Porsche">
+        </td>
+        <td class="row">
+          <img src="./images/rimac-logo.jpg" alt="Rimac">
+        </td>
+        <td class="row">
+          <img src="./images/tesla-logo.jpg" alt="Tesla">
+      </tr>
+    </main>
+    <footer class="page-footer red">
+      <!-- FIXME: There is a huge space between the bottom of the page and the footer - fix it. -->
+      <div class="footer-copyright">
+        © 2019 Vani Development
+        <div class="right" id="rights">All rights reserved</div>
+      </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+
+
+      document.addEventListener('DOMContentLoaded', function () {
+        var elems = document.querySelectorAll('.modal');
+        var instances = M.Modal.init(elems);
+      });
+    </script>
+  </body>
+
+  </html>
