Feedback on task 2

--- a/kaloyan/week1/task2/index.html
+++ b/kaloyan/week1/task2/index.html
@@ -78,13 +78,16 @@
         </div>
       </div>
     </div>
-
   </main>
   <footer>
-    <h2 class="footer-header">The Tea Cozy</h2>
-    <h5 class="email-adress">contact@theteacozy.com</h5>
-    <p class="footer-number">917-555-8904</p>
+    <!-- See css why this is in a div -->
+    <div class="contacts">
+      <h2 class="footer-header">The Tea Cozy</h2>
+      <h5 class="email-adress">contact@theteacozy.com</h5>
+      <p class="footer-number">917-555-8904</p>
+    </div>
     <p class="copyright">copyright The Tea Cozy 2017</p>
   </footer>
 </body>
+
 </html>
