--- a/kaloyan/week1/task2/index.html
+++ b/kaloyan/week1/task2/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img src="./img-tea-cozy-logo.png" alt="Tea Cozy's Logo" class="logo">
+    <img src="../../../task-assignment/week1/task_2/img-tea-cozy-logo.png" alt="Tea Cozy's Logo" class="logo">
     <nav>
       <a href="#mission">Mission</a>
       <a href="#featured-tea">Featured Tea</a>
@@ -33,23 +33,23 @@
       <h4>Whats's Steeping at The Tea Cozy?</h4>
       <div class="featured-tea-container">
         <div class="featured-tea-img-text">
-          <img src="./img-berryblitz.jpg" alt="A picture of Fall Berry Blitz Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-berryblitz.jpg" alt="A picture of Fall Berry Blitz Tea" class="featured-tea-img">
           <h4 class="featured-tea-text">Fall Berry Blitz Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="img-spiced-rum.jpg" alt="Picture of some spiced rum tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-spiced-rum.jpg" alt="Picture of some spiced rum tea" class="featured-tea-img">
           <h4 class="featured-tea-text">Spiced Rum Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="img-donut.jpg" alt="Picture of a donut" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-donut.jpg" alt="Picture of a donut" class="featured-tea-img">
           <h4 class="featured-tea-text">Seasonal Donuts</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="./img-myrtle-ave.jpg" alt="A picture a some Myrtle Ave Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-myrtle-ave.jpg" alt="A picture a some Myrtle Ave Tea" class="featured-tea-img">
           <h4 class="featured-tea-text">Myrtle Ave Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="img-bedford-bizarre.jpg" alt="Some Bedford Bizzare Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-bedford-bizarre.jpg" alt="Some Bedford Bizzare Tea" class="featured-tea-img">
           <h4 class="featured-tea-text">Bedford Bizzare Tea</h4>
         </div>
       </div>
