--- a/kaloyan/week1/task2/index.html
+++ b/kaloyan/week1/task2/index.html
@@ -5,8 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
   <title>Tea Cosy</title>
-  <link href="./style.css" type="text/css" rel="stylesheet">
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,23 +40,28 @@
       <h4>Whats's Steeping at The Tea Cozy?</h4>
       <div class="featured-tea-container">
         <div class="featured-tea-img-text">
-          <img src="../../../task-assignment/week1/task_2/img-berryblitz.jpg" alt="A picture of Fall Berry Blitz Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-berryblitz.jpg" alt="A picture of Fall Berry Blitz Tea"
+            class="featured-tea-img">
           <h4 class="featured-tea-text">Fall Berry Blitz Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="../../../task-assignment/week1/task_2/img-spiced-rum.jpg" alt="Picture of some spiced rum tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-spiced-rum.jpg" alt="Picture of some spiced rum tea"
+            class="featured-tea-img">
           <h4 class="featured-tea-text">Spiced Rum Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="../../../task-assignment/week1/task_2/img-donut.jpg" alt="Picture of a donut" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-donut.jpg" alt="Picture of a donut"
+            class="featured-tea-img">
           <h4 class="featured-tea-text">Seasonal Donuts</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="../../../task-assignment/week1/task_2/img-myrtle-ave.jpg" alt="A picture a some Myrtle Ave Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-myrtle-ave.jpg" alt="A picture a some Myrtle Ave Tea"
+            class="featured-tea-img">
           <h4 class="featured-tea-text">Myrtle Ave Tea</h4>
         </div>
         <div class="featured-tea-img-text">
-          <img src="../../../task-assignment/week1/task_2/img-bedford-bizarre.jpg" alt="Some Bedford Bizzare Tea" class="featured-tea-img">
+          <img src="../../../task-assignment/week1/task_2/img-bedford-bizarre.jpg" alt="Some Bedford Bizzare Tea"
+            class="featured-tea-img">
           <h4 class="featured-tea-text">Bedford Bizzare Tea</h4>
         </div>
       </div>
@@ -88,6 +100,13 @@
     </div>
     <p class="copyright">copyright The Tea Cozy 2017</p>
   </footer>
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 
 </html>
