--- a/kaloyan/week2/about.html
+++ b/kaloyan/week2/about.html
@@ -58,6 +58,7 @@
         </div>
         <div class="col s12 m4 l5 push-l1">
             <h4 class="red-text">k0mata</h4>
+            <!-- Why green ? This is the only place in the whole website where you have used green. It does not go well with the designn  -->
             <p class="green-text">Player since 1999.</p>
             <p class="green-text">Games: 3, 5/5DR, 6, TT2, 7</p>
             <h4 class="red-text">Main Character</h4>
