--- a/kaloyan/week2/home.html
+++ b/kaloyan/week2/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- 
+  General note: All elements that are nested within other elements should be on a new line as I have fixed it below 
+  for better readability (including text)
+
+  Overall: Great job for a first standalone project!!!!!! 
+-->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
   <title>Tekken</title>
   <link href="/kaloyan/week2/css/home.css" type="text/css" rel="stylesheet">
 </head>
@@ -23,30 +27,54 @@
     <div class="navbar-fixed">
       <nav class="nav-wrapper black">
         <div class="container">
-          <a href="/kaloyan/week2/home.html" class="brand-logo"><img height="64" class=""
-              src="/kaloyan/week2/images/logo.png" id="navbar-img"></a>
-          <img src="/kaloyan/week2/images/bryan-icon.jpg" height="64" class="right hide-on-med-and-down"
-            id="navbar-img">
+          <a href="/kaloyan/week2/home.html" class="brand-logo">
+            <img height="64" class="" src="/kaloyan/week2/images/logo.png" id="navbar-img">
+          </a>
+          <img src="/kaloyan/week2/images/bryan-icon.jpg" height="64" class="right hide-on-med-and-down" id="navbar-img">
           <a href="#" class="sidenav-trigger" data-target="mobile-menu">
-            <i class="material-icons">menu</i>
+            <i class="material-icons">
+              menu <!-- This text is pointless -->
+            </i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">About
-                me</a></li>
-            <li><a href="/kaloyan/week2/catalog.html"
-                class="red-text btn-small black waves-effect waves-light">Catalog</a></li>
-            <li><a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">Contact
-                me</a></li>
+            <!-- Maybe there should have been a "Home" button, since there is no indication how to get back to the home page (the logo I know) 
+              but that's because im experienced website ui. When a user uses the site, not all will know-->
+            <li>
+              <a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">
+                About me
+              </a>
+            </li>
+            <li>
+              <a href="/kaloyan/week2/catalog.html" class="red-text btn-small black waves-effect waves-light">
+                Catalog
+              </a>
+            </li>
+            <li>
+              <a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">
+                Contact me
+              </a>
+            </li>
           </ul>
+
           <!-- mobile-menu -->
           <ul class="sidenav black" id="mobile-menu">
-            <li><a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">About
-                me</a></li>
-            <li><a href="/kaloyan/week2/catalog.html"
-                class="red-text btn-small black waves-effect waves-light">Catalog</a></li>
-            <li><a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">Contact
-                me</a></li>
+            <li>
+              <a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">
+                About me
+              </a>
+            </li>
+            <li>
+              <a href="/kaloyan/week2/catalog.html" class="red-text btn-small black waves-effect waves-light">
+                Catalog
+              </a>
+            </li>
+            <li>
+              <a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">
+                Contact me
+              </a>
+            </li>
           </ul>
+
         </div>
       </nav>
     </div>
@@ -59,9 +87,13 @@
         <img src="/kaloyan/week2/images/bandai-namco-logo.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
-        <h4 class="red-text">What is Tekken?</h4>
-        <p class="red-text">Tekken (Japanese: 鉄拳, "Iron Fist") is a Japanese media franchise centered on a series of
-          fighting video and arcade games developed and published by Bandai Namco Entertainment in 1994.</p>
+        <h4 class="red-text">
+          What is Tekken?
+        </h4>
+        <p class="red-text">
+          Tekken (Japanese: 鉄拳, "Iron Fist") is a Japanese media franchise centered on a series of
+          fighting video and arcade games developed and published by Bandai Namco Entertainment in 1994.
+        </p>
       </div>
     </div>
 
@@ -70,10 +102,14 @@
         <img src="/kaloyan/week2/images/mishima-clan-logo.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 pull-l4 right-align">
-        <h4 class="red-text">Storyline</h4>
-        <p class="red-text">The main games in the series follow the events of the King of Iron Fist Tournament, hosted
+        <h4 class="red-text">
+          Storyline
+        </h4>
+        <p class="red-text">
+          The main games in the series follow the events of the King of Iron Fist Tournament, hosted
           by the Mishima Zaibatsu, where players control a plethora of characters to win the tournament and gain control
-          of the company.</p>
+          of the company.
+        </p>
       </div>
     </div>
 
@@ -82,11 +118,15 @@
         <img src="/kaloyan/week2/images/mechanics.png" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
-        <h4 class="red-text">Gameplay</h4>
-        <p class="red-text">Gameplay focuses on hand-to-hand combat with an opponent, with the gameplay system including
+        <h4 class="red-text">
+          Gameplay
+        </h4>
+        <p class="red-text">
+          Gameplay focuses on hand-to-hand combat with an opponent, with the gameplay system including
           blocks, throws, escapes, and ground fighting. The series later introduced combos and special moves, with
           characters also able to stage break arenas. Tekken is noted as being one of the first fighting games at the
-          time to use 3D animation.</p>
+          time to use 3D animation.
+        </p>
       </div>
     </div>
 
@@ -95,9 +135,13 @@
         <img src="/kaloyan/week2/images/world-tour.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 pull-l4 right-align">
-        <h4 class="red-text">Legacy</h4>
-        <p class="red-text">The first game in the series was the first PlayStation game to sell over a million
-          units, which earned it a Guinness World Records Gamer's Edition award in 2008, among other awards.</p>
+        <h4 class="red-text">
+          Legacy
+        </h4>
+        <p class="red-text">
+          The first game in the series was the first PlayStation game to sell over a million
+          units, which earned it a Guinness World Records Gamer's Edition award in 2008, among other awards.
+        </p>
       </div>
     </div>
   </section>
@@ -116,11 +160,17 @@
         <img src="/kaloyan/week2/images/walking-dead-logo.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
-        <h4 class="red-text">Walking dead</h4>
-        <h6 class="white-text">Latest Collaboration</h6>
-        <p class="red-text">The Walking Dead is an American post-apocalyptic horror television series for AMC based on
+        <h4 class="red-text">
+          Walking dead
+        </h4>
+        <h6 class="white-text">
+          Latest Collaboration
+        </h6>
+        <p class="red-text">
+          The Walking Dead is an American post-apocalyptic horror television series for AMC based on
           the comic book series by Robert Kirkman, Tony Moore, and Charlie Adlard. The series features a large ensemble
-          cast as survivors of a zombie apocalypse, trying to stay alive.</p>
+          cast as survivors of a zombie apocalypse, trying to stay alive.
+        </p>
       </div>
     </div>
     <div class="row">
@@ -129,6 +179,7 @@
       </video>
     </div>
   </section>
+
   <!-- Footer -->
   <div id="footer">
     <div class="page-footer black lighten-4">
@@ -138,33 +189,47 @@
             <img id="harada-img" src="/kaloyan/week2/images/harada-img.jpg" class="responsive-img">
           </div>
           <div class="col s12 m6 l5 push-l1">
-            <h4 class="red-text center-align">Katsuhiro Harada</h4>
-            <p class="red-text center-align">Katsuhiro Harada (原田 勝弘 Harada Katsuhiro, born June 10, 1970) is a Japanese
+            <h4 class="red-text center-align">
+              Katsuhiro Harada
+            </h4>
+            <p class="red-text center-align">
+              Katsuhiro Harada (原田 勝弘 Harada Katsuhiro, born June 10, 1970) is a Japanese
               game producer, director, and general manager from Bandai Namco Entertainment, best known as the producer
-              of the Tekken series.</p>
+              of the Tekken series.
+            </p>
           </div>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
-      <div class="container center-align">&copy; 2019 k0mata</div>
+      <div class="container center-align">
+        &copy; 2019 k0mata
+      </div>
     </div>
   </div>
 
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <!-- DO NOT USE JQUERY. EVER. This can be done with plain javascript - ask me when you see this to explain -->
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <script>
-    $(document).ready(function () {
-      $('.sidenav').sidenav();
-      $('.materialboxed').materialbox();
-      $('.parallax').parallax();
+    document.addEventListener('DOMContentLoaded', () => {
+      const sideNav = document.querySelectorAll('.sidenav');
+      M.Sidenav.init(sideNav, {});
     });
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const materialBox = document.querySelectorAll('.materialboxed');
+      M.Materialbox.init(materialBox, {});
+    });
+
+    document.addEventListener('DOMContentLoaded', () => {
+      const parallax = document.querySelectorAll('.parallax');
+      M.Parallax.init(parallax, {})
+    })
   </script>
 
 </body>
-
 </html>
