Removed the images and moved them to the cloud

--- a/kaloyan/week2/home.html
+++ b/kaloyan/week2/home.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- 
-  General note: All elements that are nested within other elements should be on a new line as I have fixed it below 
-  for better readability (including text)
-
-  Overall: Great job for a first standalone project!!!!!! 
--->
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>Tekken</title>
-  <link href="/kaloyan/week2/css/home.css" type="text/css" rel="stylesheet">
+  <link href="./css/home.css" type="text/css" rel="stylesheet">
+  <script src="/skewer"></script>
 </head>
 
 <body>
@@ -27,30 +19,28 @@
     <div class="navbar-fixed">
       <nav class="nav-wrapper black">
         <div class="container">
-          <a href="/kaloyan/week2/home.html" class="brand-logo">
-            <img height="64" class="" src="/kaloyan/week2/images/logo.png" id="navbar-img">
+          <a href="./home.html" class="brand-logo">
+            <img height="64" class="" src="https://drive.google.com/uc?export=view&id=1DMHAssmu0GNuoCHZ6t-QIs9WNeUMCFGf" id="navbar-img">
           </a>
-          <img src="/kaloyan/week2/images/bryan-icon.jpg" height="64" class="right hide-on-med-and-down" id="navbar-img">
+          <img src="https://drive.google.com/uc?export=view&id=1LI0EJQu-8VgaBk3vOKf5LV0pcUY26vdn" height="64" class="right hide-on-med-and-down" id="navbar-img">
           <a href="#" class="sidenav-trigger" data-target="mobile-menu">
             <i class="material-icons">
-              menu <!-- This text is pointless -->
+              menu
             </i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <!-- Maybe there should have been a "Home" button, since there is no indication how to get back to the home page (the logo I know) 
-              but that's because im experienced website ui. When a user uses the site, not all will know-->
             <li>
-              <a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./about.html" class="red-text btn-small black waves-effect waves-light">
                 About me
               </a>
             </li>
             <li>
-              <a href="/kaloyan/week2/catalog.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./catalog.html" class="red-text btn-small black waves-effect waves-light">
                 Catalog
               </a>
             </li>
             <li>
-              <a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./contact.html" class="red-text btn-small black waves-effect waves-light">
                 Contact me
               </a>
             </li>
@@ -59,17 +49,17 @@
           <!-- mobile-menu -->
           <ul class="sidenav black" id="mobile-menu">
             <li>
-              <a href="/kaloyan/week2/about.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./about.html" class="red-text btn-small black waves-effect waves-light">
                 About me
               </a>
             </li>
             <li>
-              <a href="/kaloyan/week2/catalog.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./catalog.html" class="red-text btn-small black waves-effect waves-light">
                 Catalog
               </a>
             </li>
             <li>
-              <a href="/kaloyan/week2/contact.html" class="red-text btn-small black waves-effect waves-light">
+              <a href="./contact.html" class="red-text btn-small black waves-effect waves-light">
                 Contact me
               </a>
             </li>
@@ -84,7 +74,7 @@
   <section class="container section" id="information-container">
     <div class="row">
       <div class="col s12 m6 l4">
-        <img src="/kaloyan/week2/images/bandai-namco-logo.jpg" alt="" class="responsive-img materialboxed">
+        <img src="https://drive.google.com/uc?export=view&id=1AoSwrtcTJI5EmsMnHV2wuq7L-dND4_rf" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
         <h4 class="red-text">
@@ -99,7 +89,7 @@
 
     <div class="row">
       <div class="col s12 m6 l4 push-l6 offset-l1">
-        <img src="/kaloyan/week2/images/mishima-clan-logo.jpg" alt="" class="responsive-img materialboxed">
+        <img src="https://drive.google.com/uc?export=view&id=12tCUFUUttbLDlMEqcbiyKHmRIXYIM04M" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 pull-l4 right-align">
         <h4 class="red-text">
@@ -115,7 +105,7 @@
 
     <div class="row">
       <div class="col s12 m6 l4">
-        <img src="/kaloyan/week2/images/mechanics.png" alt="" class="responsive-img materialboxed">
+        <img src="https://drive.google.com/uc?export=view&id=xciWkXSBL-YDgS3OTWV6RVcar_HiDiEh" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
         <h4 class="red-text">
@@ -132,7 +122,7 @@
 
     <div class="row">
       <div class="col s12 m6 l4 push-l6 offset-l1">
-        <img src="/kaloyan/week2/images/world-tour.jpg" alt="" class="responsive-img materialboxed">
+        <img src="https://drive.google.com/uc?export=view&id=1alc1I8ZXstrBxVbLJ1_b9xh17TLlaXbT" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 pull-l4 right-align">
         <h4 class="red-text">
@@ -150,14 +140,14 @@
 
   <div class="parallax-container hide-on-med-and-down">
     <div class="parallax">
-      <img src="/kaloyan/week2/images/negan-tekken.jpg" alt="" class="responsive-img">
+      <img src="https://drive.google.com/uc?export=view&id=1POEMhre-APjFjY6wGNVaWZyZtMKHR8Cx" alt="" class="responsive-img">
     </div>
   </div>
 
   <section class="container section" id="information-container">
     <div class="row">
       <div class="col s12 m4 l4">
-        <img src="/kaloyan/week2/images/walking-dead-logo.jpg" alt="" class="responsive-img materialboxed">
+        <img src="https://drive.google.com/uc?export=view&id=13hf16200SBN8eYAT8nnlfwYsF3i83VkW" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 m6 l6 push-l1">
         <h4 class="red-text">
@@ -175,7 +165,7 @@
     </div>
     <div class="row">
       <video class="col s12 m6 l8 offset-l2" controls>
-        <source src="/kaloyan/week2/images/negan-video.mp4" type="video/mp4">
+        <source src="https://drive.google.com/uc?export=view&id=14rQ5lVBn7Uq9DNrrlQY3k51RmRr_KHL6" type="video/mp4">
       </video>
     </div>
   </section>
@@ -186,7 +176,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12 m6 l5">
-            <img id="harada-img" src="/kaloyan/week2/images/harada-img.jpg" class="responsive-img">
+            <img id="harada-img" src="https://drive.google.com/uc?export=view&id=1lvngbGdIJRRznpwaxpbk8p02U7iNQ0Ch" class="responsive-img">
           </div>
           <div class="col s12 m6 l5 push-l1">
             <h4 class="red-text center-align">
@@ -208,10 +198,6 @@
     </div>
   </div>
 
-  <!-- DO NOT USE JQUERY. EVER. This can be done with plain javascript - ask me when you see this to explain -->
-  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
-
-  <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <script>
