Alexander: Added the pictures from the cloud in the second task

--- a/alexander/week1/second_task/main.html
+++ b/alexander/week1/second_task/main.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="img-tea-cozy-logo.png" alt="Logo" class="logo" />
+      <img src="https://drive.google.com/uc?export=view&id=b-C8PdbjWmjaj8rD1vOIonVFbSbidrbp" alt="Logo" class="logo" />
       <nav>
         <a href="/mission">Mission</a>
         <a href="/featured">Featured Tea</a>
@@ -32,7 +32,7 @@
         <div class="second-section-container">
           <div class="second-section-img-text">
             <img
-              src="img-berryblitz.jpg"
+              src="https://drive.google.com/uc?export=view&id=1vIq8Ix1WTfOM1E3DiRPy8n9aj0UntzV6"
               alt="Cup with tea"
               class="second-section-img"
             />
@@ -40,7 +40,7 @@
           </div>
           <div class="second-section-img-text">
             <img
-              src="img-spiced-rum.jpg"
+              src="https://drive.google.com/uc?export=view&id=18DKbxd_91x_ZrBZ087wGNYd6rx9w7uIU"
               alt="Box with rum"
               class="second-section-img"
             />
@@ -48,7 +48,7 @@
           </div>
           <div class="second-section-img-text">
             <img
-              src="img-donut.jpg"
+              src="https://drive.google.com/uc?export=view&id=1rArvx3dGky6nG66qARHFjO4FL96GkeOT"
               alt="Donut with sugar"
               class="second-section-img"
             />
@@ -56,7 +56,7 @@
           </div>
           <div class="second-section-img-text">
             <img
-              src="img-myrtle-ave.jpg"
+              src="https://drive.google.com/uc?export=view&id=1-pYE_TgOJL2fixmsdD_Cr3NR-knOCZxL"
               alt="Myrtle ave tea"
               class="second-section-img"
             />
@@ -64,7 +64,7 @@
           </div>
           <div class="second-section-img-text">
             <img
-              src="img-bedford-bizarre.jpg"
+               src="https://drive.google.com/uc?export=view&id=1AD8IRLNYROSreUxySbtIkXJq8lyRvJ1q"
               alt="Bizzare tea"
               class="second-section-img"
             />
